# shopping-cs

./: .env.example  .gitignore  README.md  Untitled.ipynb  pyproject.toml
app/: __init__.py  api.py  audit.py  check_apis.py  config.py  container.py  llm.py  main.py  models.py  telegram_bot.py
app/agents/: __init__.py  draft_reply_agent.py  information_collector_agent.py  judgement_agent.py  main_agent.py  planning_agent.py  sub_agent.py  tool_calling_agent.py
app/channels/: __init__.py  base.py  kakao.py  naver_talktalk.py
app/storage/: __init__.py  repository.py
tests/: test_main_agent_tools.py
